--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -1,26 +1,14 @@
-name: Deploy SwarnimJewels
-on:
-  push:
-    branches:
-      - main  # Make sure this matches your main branch name
-
+name: Simple Deploy
+on: [push]
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build project
-        run: npm run build
-
+      - uses: actions/checkout@v4
       - name: Deploy to Netlify
         uses: netlify/actions/cli@master
         with:
-          args: deploy --dir=dist --prod  # Change 'dist' if your build folder is different
+          args: deploy --dir=. --prod  # The dot '.' means "deploy everything here"
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
